hphp/hack/test/typecheck/nonnull/fc_enum_of_nonnull.php
<?hh // strict

enum Foo: nonnull {}
